--- a/src/layout.module.css
+++ b/src/layout.module.css
@@ -4,11 +4,13 @@
     box-sizing: border-box;
 }
 
-.layout {
+.container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
     height: 50px;
+    width: 300px;
+    position: absolute;
     top: 0;
+    left: 0;
 }
