--- a/src/css/signin.module.css
+++ b/src/css/signin.module.css
@@ -11,15 +11,24 @@ body {
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
     background-color: white;
     border-radius: 16px;
-    width:100%;
     height: 100%;
 }
 
-.wrapper {
+.main {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -34,13 +43,21 @@ body {
     width: 250px;
     height: 50px;
     border: none;
-    border-bottom: 2px solid #253f39;
     outline: none;
+    border-bottom: 2px solid #a0b9b3;
+    
+}
+
+.id:focus, .password:focus {
+    border-bottom: 2px solid #253f39;
 }
 
 .signinBtn , .kakaoBtn{
     width: 250px;
     height: 50px;
+    border: none;
+    outline: none;
+    border-radius: 7px;
 }
 
 .signinBtn {
@@ -53,6 +70,8 @@ body {
     color: black;
     background-color: #f9e000;
 }
+
+
 
 .Link {
     display: flex;
