[Feat] 로고 누를시 메뉴 바 나오는 기능

--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -6,11 +6,15 @@
 
 .container {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+}
+
+.menu {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
-    width: 300px;
-    position: absolute;
-    top: 0;
-    left: 0;
+    gap:10px;
 }
