--- a/src/css/signup.module.css
+++ b/src/css/signup.module.css
@@ -13,7 +13,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: 16px;
     width: 400px;
-    height: 550px;
+    height: 650px;
 
     position: absolute;
     transform: translate(-50%, -50%);
@@ -59,15 +59,22 @@
     width: 250px;
 }
 
-.emailNumberConfirmBtn {
-    position: absolute;
-    right: 70px;
-    color: white;
-    background-color: #253f39;
-}
+
 
 .signupBtn {
     color: white;
     background-color: #253f39;
     margin: 20px 0 0 0;
+}
+
+.emailDiv {
+    position: relative;
+}
+
+.emailNumberConfirmBtn {
+    position: absolute;
+    right: 0px;
+    top: 10px;
+    color: white;
+    background-color: #253f39;
 }
