--- a/src/css/signup.module.css
+++ b/src/css/signup.module.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+button {
+    border-radius: 16px;
+    height: 40px;
+    width: 100px;
+}
 
 .container {
     display: flex;
@@ -13,7 +18,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: 16px;
     width: 400px;
-    height: 650px;
+    height: 600px;
 
     position: absolute;
     transform: translate(-50%, -50%);
@@ -27,9 +32,9 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding: 40px 20px 35px 20px;
+    padding: 0px 20px 0px 20px;
     width: 390px;
-    height: 100%;
+    height: 750px;
 }
 
 .id,
@@ -41,7 +46,7 @@
     width: 250px;
     height: 50px;
     border: none;
-    border-bottom: 2px solid #253f39;
+    border-bottom: 2px solid #a0b9b3;
     outline: none;
 }
 
@@ -74,7 +79,20 @@
 .emailNumberConfirmBtn {
     position: absolute;
     right: 0px;
-    top: 10px;
+    top: 5px;
     color: white;
     background-color: #253f39;
+    width: 50px;
+    height: 40px;
+}
+
+/* focus */
+
+.id:focus,
+.password:focus,
+.confirmPassword:focus,
+.name:focus,
+.email:focus,
+.emailNumber:focus {
+    border-bottom: 2px solid #253f39;
 }
