--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -1,9 +1,31 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  }
+  
+@font-face {
+    font-family: 'yleeMortalHeartImmortalMemory';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/yleeMortalHeartImmortalMemory.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    /* main logo 폰트 */
 }
-
+  
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    /* header menu 폰트 */
+}
+  
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Pretendard-Regular', sans-serif;
+}
+  
 .container {
     display: flex;
     justify-content: center;
@@ -11,16 +33,108 @@
     height: 100px;
     width: 100%;
 }
-
-.wrapper {
+  
+.header_logo {
+    position: fixed;
+    cursor: pointer;
+    font-size: 50px;
+    color: #ffff;
+    font-family: 'yleeMortalHeartImmortalMemory', sans-serif;
+}
+  
+.header_user {
+    position: fixed;
+    right: 5%;
     display: flex;
     align-items: center;
+    gap: 13px;
+    font-size: 22px;
+    color: #ffff;
+    font-family: 'yleeMortalHeartImmortalMemory', sans-serif;
+}
+  
+.wrapper {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 30px;
+    top: 100px;
 }
 
 .menu {
+    font-family: 'Pretendard-Regular';
+}
+
+.header_search {
+    display: flex;
+    align-items: center;
+}
+
+.header_search_icon {
+    color: #ffffff;
+    margin-right: 10px;
+}
+
+.header_search_input {
+    background: none;
+    border: none;
+    border-bottom: 1px solid #ffff;
+    border-radius: 0;
+    padding: 5px 10px;
+    font-size: 18px;
+    color: #ffff;
+    outline: none;
+    margin-bottom: 23px;
+    flex: 1;
+}
+
+.header_search_input::placeholder {
+    white-space: nowrap;
+}
+
+.header_menu {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    gap:30px;
+    gap: 250px;
+    color: #ffff;
 }
+  
+.header_menu dt {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+  
+.header_menu dd {
+    font-size: 15px;
+    margin-left: 5px;
+}
+  
+.header_menu dd:not(:last-child) {
+    border-bottom: 1px solid #fff;
+    margin-bottom: 10px;
+}
+  
+.header_menu dd:hover {
+    background-color: #fff6f654;
+    border-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
+}  
+
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  .header_logo,
+  .header_user,
+  .header_menu,
+  .menu {
+    animation: fadeIn 0.5s ease-in-out;
+  }
+  
