--- a/src/css/product.module.css
+++ b/src/css/product.module.css
@@ -16,15 +16,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 320px;
-    height: 320px;
+    width: 520px;
+    height: 520px;
     border: 1px solid pink;
     border-radius: 7px;
 }
 
 .image {
-    width: 320px;
-    height: 320px;
+    width: 520px;
+    height: 520px;
     border-radius: 16px;
     object-fit: cover;
 }
@@ -35,27 +35,32 @@
     justify-content: center;
     background-color: white;
     border-radius: 7px;
-    width: 240px;
-    height: 320px;
-    padding: 16px;
+    width: 400px;
+    height: 520px;
+    padding: 45px;
 }
 
 .inforHeader {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-bottom: 20px;
+    gap: 10px;
+    margin-bottom: 70px;
+    height: 70px;
+    width: 280px;
 }
 
-.inforTitle, .inforPrice, .selectWrapper, .quantity {
-    font-size: 13px;
+.inforTitle, .inforName, .inforPrice, .selectWrapper, .quantity, .amount {
+    font-size: 20px;
 }
 
 .inforBody {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 10px;
     border-bottom: 1px solid black;
+    width: 280px;
 }
 
 .selectWrapper {
@@ -68,7 +73,7 @@
 }
 
 .amount {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .bottom {
@@ -76,14 +81,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap:5px;
-    margin-top: 10px;
+    gap:15px;
+    margin-top: 20px;
 }
 
 .buyBtn, .pickBtn {
-    width: 208px;
-    height: 30px;
+    width: 310px;
+    height: 50px;
     border-radius: 7px;
+    font-size: 20px;
     cursor: pointer;
 }
 
@@ -114,7 +120,9 @@
 }
 
 .detailWrapper, .commentWrapper {
-    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     height: auto;
     margin: 16px;
@@ -124,27 +132,40 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 7px;
-    background-color: #253f39;
-    color: white;
-}
-
-.detailHeader2, .commentHeader2 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     background-color: #253f39;
     color: white;
+    height:40px;
+    width: 100%;
 }
 
-.detailBtn, .commentBtn {
+.title {
+    margin-left: 10px;
+}
+
+.detailBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: none;
-    background: none;
-    color: white;
+    color: #253f39;
     cursor: pointer;
-    width: 17px;
+    width: 97%;
+    height: 70px;
+    position: absolute;
+    top: 924px;
+    background: linear-gradient(to bottom,
+            rgb(252, 252, 2520, 0.1) 0%,
+            rgba(252, 252, 252, 0.3) 25%,
+            rgba(252, 252, 252, 0.5) 50%,
+            rgba(252, 252, 252, 0.8) 75%,
+            rgba(252, 252, 252) 100%)
+}
+
+.FontAwesomeIcon {
+    width: 50px;
+    height: 50px;
 }
 
 .detailInfor, .commentInfor {
@@ -152,6 +173,34 @@
     border-bottom-right-radius: 7px;
     border: 1px solid #253f39;
     height: 300px;
+    width: 100%;
+}
+
+.detailInfor2 {
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+    border: 1px solid #253f39;
+    height: 500px;
+    width: 100%;
+}
+
+.detailBtn2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    color: #253f39;
+    cursor: pointer;
+    width: 97%;
+    height: 70px;
+    position: absolute;
+    top: 1120px;
+    background: linear-gradient(to bottom,
+            rgb(252, 252, 2520, 0.1) 0%,
+            rgba(252, 252, 252, 0.3) 25%,
+            rgba(252, 252, 252, 0.5) 50%,
+            rgba(252, 252, 252, 0.8) 75%,
+            rgba(252, 252, 252) 100%)
 }
 
 .createCommentContainer {
