--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -34,7 +34,7 @@ body {
     width: 100%;
 }
   
-.header_logo {
+.headerLogo {
     position: fixed;
     cursor: pointer;
     font-size: 50px;
@@ -42,7 +42,7 @@ body {
     font-family: 'yleeMortalHeartImmortalMemory', sans-serif;
 }
   
-.header_user {
+.headerUser {
     position: fixed;
     right: 5%;
     display: flex;
@@ -66,17 +66,17 @@ body {
     font-family: 'Pretendard-Regular';
 }
 
-.header_search {
+.headerSearch {
     display: flex;
     align-items: center;
 }
 
-.header_search_icon {
+.headerSearchIcon {
     color: #ffffff;
     margin-right: 10px;
 }
 
-.header_search_input {
+.headerSearchInput {
     background: none;
     border: none;
     border-bottom: 1px solid #ffff;
@@ -89,37 +89,52 @@ body {
     flex: 1;
 }
 
-.header_search_input::placeholder {
+.headerSearchInput::placeholder {
     white-space: nowrap;
 }
 
-.header_menu {
+.headerMenu {
     display: flex;
     justify-content: space-between;
     gap: 250px;
     color: #ffff;
 }
   
-.header_menu dt {
+.headerMenu dt {
     font-size: 18px;
     margin-bottom: 5px;
 }
   
-.header_menu dd {
-    font-size: 15px;
-    margin-left: 5px;
-}
-  
-.header_menu dd:not(:last-child) {
-    border-bottom: 1px solid #fff;
+.headerMenu div {
     margin-bottom: 10px;
 }
+
+.headerMenu dt .dtLink {
+    color: white;
+    text-decoration: none;
+}
+
+.headerMenu dd {
+    font-size: 15px;
+    margin-left: 5px;
+    padding-bottom: 10px;
+}
   
-.header_menu dd:hover {
+.headerMenu dd .menuLink {
+    color: white;
+    text-decoration: none;
+}
+
+.headerMenu dd .menuLink:hover {
     background-color: #fff6f654;
     border-radius: 5px;
     transition: background-color 0.3s ease-in-out;
-}  
+}
+
+.headerMenu dd:not(:last-child) {
+    border-bottom: 1px solid #fff;
+    margin-bottom: 10px;
+}
 
 @keyframes fadeIn {
     from {
@@ -131,9 +146,9 @@ body {
       transform: translateY(0);
     }
   }
-  .header_logo,
-  .header_user,
-  .header_menu,
+  .headerLogo,
+  .headerUser,
+  .headerMenu,
   .menu {
     animation: fadeIn 0.5s ease-in-out;
   }
