--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -1,3 +1,53 @@
-.footer{
-    
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    /* 기본폰트 */
 }
+
+body {
+    font-family: 'Pretendard-Regular', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+.footer {
+    color: #ecf0f1;
+    padding: 40px 0;
+    text-align: center;
+}
+  
+.footerContent {
+    display: flex;
+    justify-content: space-between;
+}
+  
+.companyInfo,
+.projectMember {
+    flex: 1;
+}
+  
+.companyName {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+  
+.companyAddress,
+.companyContact,
+.projectTitle {
+    margin-top: 10px;
+}
+  
+.projectMembers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 10px;
+}
+  
+.projectMembers div {
+    margin: 0 10px;
+}
+  
