--- a/src/css/product.module.css
+++ b/src/css/product.module.css
@@ -174,6 +174,7 @@
     border: 1px solid #253f39;
     height: 300px;
     width: 100%;
+    overflow: hidden;
 }
 
 .detailInfor2 {
@@ -223,6 +224,10 @@
 
 .createCommentTitle {
     font-weight: 700;
+}
+
+.starIconWrapper {
+    display: none;
 }
 
 .createCommentMain {
