--- a/src/css/signup.module.css
+++ b/src/css/signup.module.css
@@ -10,7 +10,15 @@ button {
     width: 100px;
 }
 
+.bodys {
+    margin-top:-100px;
+    width: 100vw;
+    height: 100vh;
+    background-color: #253f39;
+}
+
 .container {
+    
     display: flex;
     justify-content: center;
     flex-direction: column;
