--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -19,7 +19,6 @@
     font-style: normal;
     /* header menu 폰트 */
 }
-
   
 body {
     margin: 0;
@@ -38,10 +37,11 @@ body {
     margin-right: 10%;
     border-radius: 30px 30px 0px 0px;
     overflow: hidden; 
+    z-index: 100;
+    position: fixed;
 }
 
 .openMenu {
-    position: fixed;
     background-color: #253f39;
 }
    
@@ -52,9 +52,8 @@ body {
     color: #ffff;
     font-family: 'Monsieur La Doulaise';
     filter: drop-shadow(0 0 15px rgba(195, 176, 145, 0.8))
-    drop-shadow(0 0 5px rgba(195, 176, 145, 0.5))
-    drop-shadow(0 0 2px rgba(195, 176, 145, 0.2));
-
+            drop-shadow(0 0 5px rgba(195, 176, 145, 0.5))
+            drop-shadow(0 0 2px rgba(195, 176, 145, 0.2));
 }
   
 .headerUser {
@@ -62,12 +61,17 @@ body {
     right: 15%;
     display: flex;
     align-items: center;
-    gap: 13px;
+    gap: 18px;
     font-size: 22px;
     color: #ffff;
     font-family: 'yleeMortalHeartImmortalMemory', sans-serif;
 }
   
+.text {
+    margin-left: 8px;
+    font-size: 28px;
+}
+
 .wrapper {
     position: fixed;
     display: flex;
@@ -83,6 +87,7 @@ body {
 .menu {
     font-family: 'Pretendard-Regular';
     border-radius: 0px 0px 30px 30px;
+    z-index: 100;
 }
 
 .headerSearch {
