--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -30,12 +30,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
+    min-height: 100px;
     width: 80%;
     transition: background-color 0.5s ease-in-out;
     margin-left: 10%;
     margin-right: 10%;
-    border-radius: 30px 30px 0px 0px;
+    border-radius: 30px 30px 30px 30px;
     overflow: hidden; 
     z-index: 100;
     position: fixed;
@@ -46,34 +46,54 @@ body {
 }
    
 .headerLogo {
-    position: fixed;
+    position: inherit;
+    top: 3%;
     cursor: pointer;
     font-size: 50px;
-    color: #ffff;
+    color: #253f39;
     font-family: 'Monsieur La Doulaise';
-    filter: drop-shadow(0 0 15px rgba(195, 176, 145, 0.8))
-            drop-shadow(0 0 5px rgba(195, 176, 145, 0.5))
-            drop-shadow(0 0 2px rgba(195, 176, 145, 0.2));
+    filter: drop-shadow(0 0 20px rgba(255, 187, 0, 0.7)) 
+            drop-shadow(0 0 10px rgba(255, 234, 112, 0.5)) 
+            drop-shadow(0 0 5px rgba(255, 238, 112, 0.3));
 }
-  
+
 .headerUser {
-    position: fixed;
-    right: 15%;
+    position: relative;
+    margin-top: -65px;
+    left: 75%;
     display: flex;
     align-items: center;
     gap: 18px;
     font-size: 22px;
-    color: #ffff;
     font-family: 'yleeMortalHeartImmortalMemory', sans-serif;
 }
   
+.iconLink {
+    color: #253f39;
+    text-decoration: none;
+}
+
 .text {
+    color: #253f39;
     margin-left: 8px;
     font-size: 28px;
+    font-weight: bold;
+}
+
+.openMenu .headerLogo {
+    color: #fff;
+}
+
+.openMenu .iconLink {
+    color: #fff;
+}
+
+.openMenu .text {
+    color: #fff;
 }
 
 .wrapper {
-    position: fixed;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -86,8 +106,9 @@ body {
 
 .menu {
     font-family: 'Pretendard-Regular';
-    border-radius: 0px 0px 30px 30px;
+    border-radius: 30px 30px 30px 30px;
     z-index: 100;
+    margin-bottom: 80px;
 }
 
 .headerSearch {
@@ -99,7 +120,7 @@ body {
 .headerSearchIcon {
     color: #ffffff;
     position: absolute;
-    left: 250px;
+    left: 30%;
 }
 
 .headerSearchInput {
@@ -168,26 +189,24 @@ body {
 
 .headerMenu dd:last-child {
     border-bottom: 1px solid #fff;
-    margin-bottom: 20px;
+    margin-bottom: 28px;
 }
 
   @keyframes fadeInWithScale {
     from {
       opacity: 0;
-      transform: translateY(-10px) scale(0.9, 0.9);
       background-color: transparent;
     }
     to {
       opacity: 1;
-      transform: translateY(0) scale(1, 1);
       background-color: #253f39;
     }
     }
-    .menu {
+    .openMenu{
         animation: fadeInWithScale 0.5s ease-out;
         transform-origin: 50% 0;
         transform: scale(1, 1);
-        transition: all 0.5s cubic-bezier(.72, .02, 1, .55);
+        transition: all 0.2s cubic-bezier(.72, .02, 1, .55);
         animation-fill-mode: forwards;
     }
   
