--- a/src/css/product.module.css
+++ b/src/css/product.module.css
@@ -7,29 +7,32 @@
 .inforcontainer {
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-    gap: 70px;
-    background-color:#253f39;
     padding-top: 100px;
-    padding-bottom: 30px;
+    margin-bottom: 50px;
+    
+}
+
+.inforBox{
+    display: flex;
+    justify-content: space-between;
+    width: 900px;
 }
 
 .imageWrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 520px;
-    height: 520px;
-    border: 1px solid pink;
-    border-radius: 7px;
+    width: 420px;
+    height: 420px;
+    border-radius: 5px;
 }
 
 .image {
     width: 520px;
-    height: 520px;
-    border-radius: 16px;
+    height: 420px;
     object-fit: cover;
+    border-bottom: 5px solid #253f39;
+    border-top: 5px solid #253f39;
 }
 
 .inforWrapper {
@@ -37,24 +40,49 @@
     flex-direction: column;
     justify-content: center;
     background-color: white;
-    border-radius: 7px;
+    border-radius: 5px;
     width: 400px;
-    height: 520px;
+    height: 420px;
     padding: 45px;
+    border: 1px solid #bababa;
 }
 
 .inforHeader {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    gap: 10px;
-    margin-bottom: 70px;
-    height: 70px;
-    width: 280px;
 }
 
-.inforTitle, .inforName, .inforPrice, .selectWrapper, .quantity, .amount {
+.inforTitle {
+    color: #bababa;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.inforName {
     font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.inforRate{
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.inforPrice {
+    font-size: 18px;
+}
+
+.selectWrapper {
+    font-size: 18px;
+}
+
+.quantity {
+    font-size: 18px;
+}
+
+.amount {
+    font-size: 18px;
 }
 
 .inforBody {
@@ -77,6 +105,7 @@
 
 .amount {
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .bottom {
@@ -85,14 +114,13 @@
     justify-content: center;
     align-items: center;
     gap:15px;
-    margin-top: 20px;
 }
 
 .buyBtn, .pickBtn {
     width: 310px;
-    height: 50px;
-    border-radius: 7px;
-    font-size: 20px;
+    height: 40px;
+    border-radius: 5px;
+    font-size: 18px;
     cursor: pointer;
 }
 
@@ -100,14 +128,12 @@
     background-color: #253f39;
     color: white;
     border: none;
-    font-weight: 700;
 }
 
 .pickBtn {
-    background-color: white;
-    color:#253f39;
+    background-color: #ffffff;
+    color: #253f39;
     border: 2px solid #253f39;
-    font-weight: 700;
 }
 
 .buyBtn:hover, .pickBtn:hover {
@@ -119,28 +145,27 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: white;
 }
 
 .detailWrapper, .commentWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 900px;
     height: auto;
-    margin: 16px;
+    position: relative;
 }
 
 .detailHeader, .commentHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    background-color: #253f39;
-    color: white;
-    height:40px;
+    color: #253f39;
+    height: 45px;
     width: 100%;
+    border-top: 5px solid #253f39;
+    border-bottom: 1px solid #253f39;
+    margin-bottom: 20px;
 }
 
 .title {
@@ -172,18 +197,16 @@
 }
 
 .detailInfor, .commentInfor {
-    border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px;
     border: 1px solid #253f39;
     height: 300px;
     width: 100%;
     overflow: hidden;
     text-align: center;
+    border-radius: 5px;
 }
 
 .datailImg {
     width: 900px;
-    height: 500px;
 }
 
 .detailInfor2 {
