--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -43,29 +43,30 @@ body {
 
 .openMenu {
     background-color: #253f39;
+    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.05);
 }
    
 .headerLogo {
     position: inherit;
-    top: 3%;
+    top: 20px;
     cursor: pointer;
     font-size: 50px;
     color: #253f39;
     font-family: 'Monsieur La Doulaise';
-    filter: drop-shadow(0 0 20px rgba(255, 187, 0, 0.7)) 
-            drop-shadow(0 0 10px rgba(255, 234, 112, 0.5)) 
-            drop-shadow(0 0 5px rgba(255, 238, 112, 0.3));
+    filter: drop-shadow(0 0 20px rgba(255, 187, 0, 0.4)) drop-shadow(0 0 10px rgba(255, 234, 112, 0.4)) drop-shadow(0 0 5px rgba(255, 238, 112, 0.4));
+    user-select:none;
+    z-index: 5;
 }
 
 .headerUser {
     position: relative;
-    margin-top: -65px;
-    left: 75%;
+    margin-top: -50px;
     display: flex;
     align-items: center;
-    gap: 18px;
-    font-size: 22px;
+    gap: 20px;
+    font-size: 20px;
     font-family: 'yleeMortalHeartImmortalMemory', sans-serif;
+    justify-content: flex-end;
 }
   
 .iconLink {
@@ -75,9 +76,9 @@ body {
 
 .text {
     color: #253f39;
-    margin-left: 8px;
-    font-size: 28px;
-    font-weight: bold;
+    margin-left: 10px;
+    font-size: 20px;
+    /* font-weight: bold; */
 }
 
 .openMenu .headerLogo {
@@ -106,37 +107,37 @@ body {
 
 .menu {
     font-family: 'Pretendard-Regular';
-    border-radius: 30px 30px 30px 30px;
-    z-index: 100;
     margin-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .headerSearch {
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 .headerSearchIcon {
     color: #ffffff;
     position: absolute;
-    left: 30%;
+    right: 0px;
+    font-size: 20px;
 }
 
 .headerSearchInput {
     background: none;
     border: none;
-    border-bottom: 1px solid #ffff;
-    border-radius: 0;
-    padding: 5px 10px;
+    padding: 5px 25px;
+    padding-left: 0px;
     font-size: 18px;
     color: #ffff;
     outline: none;
-    flex: 0.5;
-    margin: 23px auto;
-    text-align: center;
-    display: block;
-    width: 80%;
+    border-bottom: 1px solid white;
+    width: 410px;
 }
 
 .headerSearchInput::placeholder {
@@ -147,13 +148,12 @@ body {
     display: flex;
     justify-content: space-between;
     color: #ffff;
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 735px;
 }
 
 .headerMenu dt {
-    font-size: 18px;
-    margin-bottom: 5px;
+    font-size: 22px;
+    margin-bottom: 10px;
 }
   
 .headerMenu div {
@@ -167,19 +167,18 @@ body {
 
 .headerMenu dd {
     font-size: 15px;
-    margin-left: 5px;
     padding-bottom: 8px;
 }
   
 .headerMenu dd .menuLink {
     color: white;
     text-decoration: none;
+    padding: 2px;
 }
 
 .headerMenu dd .menuLink:hover {
     background-color: #fff6f654;
-    border-radius: 5px;
-    transition: background-color 0.5s ease-in-out;
+    transition: background-color 0.2s ease-in-out;
 }
 
 .headerMenu dd:not(:last-child) {
@@ -195,7 +194,6 @@ body {
   @keyframes fadeInWithScale {
     from {
       opacity: 0;
-      background-color: transparent;
     }
     to {
       opacity: 1;
