--- a/src/css/product.module.css
+++ b/src/css/product.module.css
@@ -7,8 +7,8 @@
 .inforcontainer {
     display: flex;
     justify-content: center;
-    padding-top: 100px;
-    margin-bottom: 50px;
+    padding-top: 150px;
+    margin-bottom: 100px;
     
 }
 
@@ -31,20 +31,19 @@
     width: 520px;
     height: 420px;
     object-fit: cover;
-    border-bottom: 5px solid #253f39;
-    border-top: 5px solid #253f39;
+    /* border-bottom: 5px solid #253f39;
+    border-top: 5px solid #253f39; */
 }
 
 .inforWrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     background-color: white;
     border-radius: 5px;
     width: 400px;
     height: 420px;
-    padding: 45px;
-    border: 1px solid #bababa;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 .inforHeader {
@@ -91,7 +90,7 @@
     justify-content: center;
     gap: 10px;
     border-bottom: 1px solid black;
-    width: 280px;
+    width: 310px;
 }
 
 .selectWrapper {
@@ -145,6 +144,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-bottom: 150px;
 }
 
 .detailWrapper, .commentWrapper {
@@ -170,25 +170,20 @@
 
 .title {
     margin-left: 10px;
+    font-size: 20px;
 }
 
 .detailBtn {
     display: flex;
     justify-content: center;
-    align-items: center;
-    border: none;
+    align-items: flex-end;
     color: #253f39;
     cursor: pointer;
-    width: 97%;
-    height: 70px;
+    width: 100%;
+    height: 200px;
     position: absolute;
-    top: 953px;
-    background: linear-gradient(to bottom,
-            rgb(252, 252, 2520, 0.1) 0%,
-            rgba(252, 252, 252, 0.3) 25%,
-            rgba(252, 252, 252, 0.5) 50%,
-            rgba(252, 252, 252, 0.8) 75%,
-            rgba(252, 252, 252) 100%)
+    bottom: -60px;
+    background: linear-gradient(to bottom, rgb(252, 252, 2520, 0.0) 0%, rgba(255, 255, 255, 0.6), rgb(255 255 255) 100%);
 }
 
 .FontAwesomeIcon {
@@ -197,7 +192,7 @@
 }
 
 .detailInfor, .commentInfor {
-    border: 1px solid #253f39;
+    /* border: 1px solid #253f39; */
     height: 300px;
     width: 100%;
     overflow: hidden;
