--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -2,14 +2,50 @@
 
 }
 
+/* section1 슬라이더보드 스타일 */
 .mainSwiper {
-
+    position: relative;
+    overflow: hidden;
 }
 
+.slide {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slideBox {
+    display: flex;
+}
+
+.slideBoxImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slideBtnBox {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+    padding: 0 10px;
+    color: white;
+    size: 100px;
+}
+  
+.slideLeftBtn,
+.slideRightBtn {
+    cursor: pointer;
+}
+  
+/* section2 브랜드스토리 스타일 */
 .mainBrand {
 
 }
 
+/* section3 스타일 */
 .mainMouse {
     
 }
