--- a/src/css/qna.module.css
+++ b/src/css/qna.module.css
@@ -4,11 +4,6 @@
     box-sizing: border-box;
 }
 
-.hi, .hi2 {
-    width: 100px;
-    height: 100px;
-}
-
 .qnaContainer {
     display: flex;
     flex-direction: column;
@@ -239,6 +234,13 @@
     scale:1.1;
 }
 
+.answerMainName {
+    border-radius: 7px;
+    width: 450px;
+    height: 50px;
+    resize: none;
+}
+
 .inquireMainAnswer {
     border-radius: 7px;
     margin-top: 10px;
@@ -263,6 +265,7 @@
     display: flex;
     justify-content: flex-start;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .answerMain {
