--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -19,6 +19,10 @@
     font-style: normal;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .main {
 
 }
@@ -32,7 +36,7 @@
 .slide {
     position: relative;
     display: flex;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 1s ease-in-out;
 }
 
 .slideBox {
@@ -126,6 +130,7 @@
     border-radius: 20px;
     border-style: none;
     margin-right: 30px;
+    margin-bottom: 10px;
 }
 
 /* section3 스타일 */
