--- a/src/css/list.module.css
+++ b/src/css/list.module.css
@@ -6,6 +6,7 @@
 
 .bodys {
     padding: 40px 60px 20px 60px;
+
     width: auto;
     height: auto;
     background-color: white;
@@ -38,7 +39,6 @@
 .selectedSort {
     font-weight: bold;
     font-size: 20px;
-    /* 다른 굵게 표시할 스타일을 추가할 수 있습니다. */
 }
 
 .container2 {
@@ -143,6 +143,40 @@ hr {
 
     font-size: 20px;
     font-weight: bold;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: rgb(177, 177, 177);
+        z-index: -1;
+
+    }
+}
+
+.listMoreDiv {
+    position: relative;
+    display: flex;
+    width: auto;
+    height: 50px;
+    align-items: end;
+    justify-content: center;
+    border-top: solid 20px white;
+    z-index: 2;
+
+}
+
+.listMoreText {
+
+    cursor: pointer;
+    background-color: white;
+
+    font-size: 20px;
+    font-weight: bold;
+
 
     &::before {
         content: "";
