[feat]검색페이지 색상 정렬

--- a/src/css/search.module.css
+++ b/src/css/search.module.css
@@ -40,8 +40,13 @@
 .colorContainer {
     display: flex;
     justify-content: space-between;
-    width: 200px;
+    align-items: center;
+    width: 440px;
 
+}
+
+.white {
+    border: solid 1px;
 }
 
 
