--- a/src/css/order.module.css
+++ b/src/css/order.module.css
@@ -5,7 +5,7 @@
 }
 
 .bodys {
-    padding: 40px;
+    padding: 40px 250px 40px 250px;
     width: 100vw;
     height: auto;
     background-color: #253f39;
@@ -19,13 +19,90 @@
 
 }
 
+.mainContainer {}
+
 .orderList {
-    padding: 20px 0 0 20px;
+    padding: 30px 0 0 30px;
     width: 100vw;
     height: 100%;
 }
 
-.orderContainer {
-    padding: 20px 0 0 40px;
 
+.orderContainer {
+    position: relative;
+    padding: 0 0 20px 60px;
+
+}
+
+.infoContainer {
+    position: absolute;
+    width: auto;
+    top: 17px;
+    left: 220px
+}
+
+.reBuy {
+    width: 150px;
+    border-radius: 10px;
+    color: white;
+    background-color: #253f39
+}
+
+.imgContainer {
+    display: flex;
+    align-items: end;
+    width: 150px;
+    height: 150px;
+}
+
+.img {
+    width: 150px;
+    height: 120px;
+}
+
+.productName {
+    font-size: 32px;
+    font-weight: bold;
+    margin: 5px 0 5px 0;
+}
+
+.productColor {
+    margin-left: 10px;
+    font-size: 18px;
+    margin: 5px 0 5px 0;
+}
+
+.productCount {
+    font-size: 18px;
+    margin: 5px 0 5px 0;
+}
+
+.delivery {
+    font-size: 18px;
+    margin: 5px 0 5px 0;
+}
+
+.price {
+    font-size: 18px;
+    margin: 5px 0 5px 0;
+}
+
+.paymentPrice {
+    font-weight: bold;
+}
+
+.deliveryStatus {
+    font-size: 18px;
+    margin: 5px 0 5px 0;
+}
+
+.cancle {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+}
+
+.hr {
+    width: auto;
 }
