--- a/src/css/product.module.css
+++ b/src/css/product.module.css
@@ -96,9 +96,12 @@
 .selectWrapper {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px
 }
 
 .quantity {
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 10px;
 }
 
