[Feat] 결제 페이지 틀잡기

--- a/src/css/buy.module.css
+++ b/src/css/buy.module.css
@@ -116,6 +116,77 @@
 }
 
 .couponUse{
-    
+
 }
 
+.listImgBox{
+
+}
+
+.listData{
+
+}
+
+.deliveryDateBox{
+
+}
+
+.devliveryDateTitle{
+
+}
+
+.deliveryDateChoice{
+
+}
+
+.cashBox{
+
+}
+
+.dpayBox{
+
+}
+
+.dpayListBox{
+
+}
+
+.dpayAddBox{
+
+}
+
+.cashResultBox{
+
+}
+
+.cashResult{
+
+}
+
+.cashResultTitle{
+
+}
+
+.cashResultContent{
+
+}
+
+.cashDiscountResult{
+
+}
+
+.cashDiscountResultTitle{
+
+}
+
+.cashDiscountResultContent{
+
+}
+
+.goBox{
+
+}
+
+.go{
+    
+}
