--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -153,7 +153,7 @@ body {
 }
 
 .randomImage {
-    position: relative;
+    position: absolute;
     width: 350px;
     height: 405px;
     transition: opacity 0.5s ease-in-out, width 0.5s ease-in-out, height 0.5s ease-in-out;
