--- a/src/css/cart.module.css
+++ b/src/css/cart.module.css
@@ -87,6 +87,7 @@
 .cartInfo {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: white;
 }
 
@@ -110,7 +111,6 @@
     flex-direction: column;
     width: 100%;
     height: 60px;
-    padding-right: 20px;
 }
 
 .orderBtn {
@@ -131,4 +131,42 @@
 
 .orderBtn:hover {
     scale:1.05;
+}
+
+.amountWrapper {
+    display: flex;
+    justify-content: space-around;
+    height: auto;
+    width: auto;
+    gap: 10px;
+}
+
+.amountTitle {
+    display: flex;
+    align-items: center;
+    padding-right: 10px;
+}
+
+.amountPrice {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 10px;
+}
+
+.amountBtn {
+    background-color: #253f39;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    width: 15px;
+}
+
+.amountIcon {
+    color: white;
+}
+
+.amountIcon:active {
+    scale: 1.4;
 }
