--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -154,10 +154,12 @@ body {
 
 .randomImage {
     position: absolute;
-    width: 350px;
-    height: 405px;
+    width: 300px;
+    height: 380px;
     transition: opacity 0.5s ease-in-out, width 0.5s ease-in-out, height 0.5s ease-in-out;
     animation: mouseImg 3s ease-in-out;
+    animation-fill-mode: forwards;
+    object-fit: cover;
 }
 
 @keyframes mouseImg {
